Prepare public project version